# llmoops-final_project

./: .env  .gitignore  README.md
__MACOSX/session3_code/: ._src
session3_code/: .env.example  1761490156052-lf-traces-export-cmh270g6p000mad07qlm3ynvv.csv  1761490957457-lf-traces-export-cmh270g6p000mad07qlm3ynvv.csv  1761565661292-lf-observations-export-cmh270g6p000mad07qlm3ynvv.csv  README.md  analyse_langfuse.py  clean_langfuse_data.csv  model_training_pipeline.json  pipeline_souesme_arroyo_fernandes.json  pipeline_test.json  pyproject.toml  test.py
session3_code/data/: sample_request.json
session3_code/scripts/: pipeline_runner.py  pipeline_souesme_arroyo_fernandes.json  pipeline_souesme_arroyo_fernandes_finetune.json  register_model_with_custom_handler.py
session3_code/src/: 1761477612243-lf-observations-export-cmh270g6p000mad07qlm3ynvv.json  constants.py  convert_json.py  extract_api.py  metrics.py
session3_code/src/albertschool_llmops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
session3_code/src/app/: main.py  main_clean.py
session3_code/src/pipeline_components/: data_transformation_component.py  evaluation_component.py  fine_tuning_component.py  inference_component.py
session3_code/src/pipelines/: model_training_pipeline.py  pyproject.toml
