[tool.poetry]
name = "albertschool-machinelearning-teaching-material"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
jinja2 = "^3.1.4"
seaborn = "^0.13.2"
ydata-profiling = "^4.10.0"
numpy = "2.0"
jupytext = "^1.16.4"
mlflow = "^2.17.0"
virtualenv = "^20.26.6"
dill = "^0.3.9"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
